--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
   "name": "AnswerVault",
   "short_name": "AnswerVault",
+  "description": "A smart flashcard app for learning and memorization",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#00dd00",
-  "theme_color": "#99ff99",
+  "background_color": "#f8fafc",
+  "theme_color": "#2563eb",
   "icons": [
     {
       "src": "./icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "./icon.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "orientation": "portrait",
+  "categories": ["education", "productivity"],
+  "prefer_related_applications": false
 }
